Fix horizontally scrolling cards on mobile

--- a/src/assets/styles/base/_base.pcss
+++ b/src/assets/styles/base/_base.pcss
@@ -5,7 +5,7 @@
 }
 
 .main {
-    @apply flex flex-col lg:m-16 md:m-8 m-4;
+    @apply flex flex-col lg:p-16 md:p-8 p-4 overflow-hidden;
 }
 
 body {
