--- a/src/assets/styles/components/_card.pcss
+++ b/src/assets/styles/components/_card.pcss
@@ -1,6 +1,8 @@
 .scrollingcards {
-    @apply lg:grid flex overflow-x-auto flex-nowrap gap-x-4 gap-y-4 grid-cols-fit-80 lg:mx-0 lg:px-0 -mx-96 px-96 -my-96 py-96;
+    @apply lg:grid flex overflow-x-auto flex-nowrap gap-x-4 gap-y-4 grid-cols-fit-80 lg:mx-0 lg:px-0;
     scrollbar-width: none;
+    padding: 40rem;
+    margin: -40rem;
 
     &::-webkit-scrollbar {
         height: 0px;
@@ -8,6 +10,6 @@
 
     &::after {
         content: " ";
-        @apply min-w-8;
+        min-width: 39rem;
     }
 }
